# myblog

./: .eslintignore  .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json  type.d.ts
components/: Card.tsx  ExampleLayout.tsx  LayoutWrapper.tsx  Link.tsx  SEO.tsx  Tag.tsx
data/: projectsData.ts  siteMetadata.js
data/authors/: default.md
data/blog/: createsnakegame.mdx  nextjskeynotes.mdx  pythonnotes.mdx  rustlearningnotes.mdx  vercelwithgoogledomain.mdx  webassemblynote.mdx  webgpu-hellotriangle.mdx  webgpu-rotatingcube.mdx
data/blog-zh/: createsnakegame.mdx  nextjskeynotes.mdx  pythonnotes.mdx  rustlearningnotes.mdx  vercelwithgoogledomain.mdx  webassemblynote.mdx  webgpu-hellotriangle.mdx  webgpu-rotatingcube.mdx
examples/games/snakegame/: main.tsx
examples/webgpu/enginecore/: DeviceResource.ts
examples/webgpu/hellotriangle/: main.ts  triangle.frag.wgsl  triangle.vert.wgsl
examples/webgpu/helper/: CubeHelper.ts  edge.vert.wgsl
examples/webgpu/rotatingcube/: cube.frag.wgsl  cube.vert.wgsl  main.ts
layouts/: PostLayout.tsx
lib/: mdx.ts
pages/: _app.tsx  blog.tsx  index.tsx
pages/blog/: [...slug].tsx
pages/examples/: [slug].tsx
pages/tags/: [tag].tsx
wasm/snake_game/: Cargo.toml
wasm/snake_game/pkg/: package.json  snake_game.d.ts  snake_game.js  snake_game_bg.wasm  snake_game_bg.wasm.d.ts
wasm/snake_game/src/: lib.rs
