[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.91"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.68"

[lib]
crate-type = ["cdylib"]